[project]
name = "activity-report-automation"
version = "0.1.0"
description = "Activity Report Automation"
authors = [
    {name = "JosueOb",email = "josuericardocando@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false